- generation of openapi specification along with module web router configurer - expose webjars - expose openapi specifications /open-api, /open-api/{module} as json and html displaying the swagger-ui (requires swagger-ui webjar)